Fix layout issues

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -681,4 +681,29 @@ input[type=date]:focus:before {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .nForm__saveButton {
+    margin-left: auto;
+    margin-right: 0.5rem;
+    width: 8.3125rem;
+    height: 3rem;
+  }
+  .nForm__discardButton {
+    width: 6rem;
+    height: 3rem;
+  }
+  .nForm__sendButton {
+    width: 8rem;
+    height: 3rem;
+  }
+  .container {
+    max-width: 800px;
+  }
+}
+@media screen and (min-width: 1290px) {
+  .container {
+    max-width: 1100px;
+  }
 }/*# sourceMappingURL=styles.css.map */
